--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <center>
   <h1>My Store</h1>
-  <img src = "https://github.com/iammrd/My-website/blob/main/Google-Play-Logo-2008.png" alt="Store logo">
+  <img src = "main/Google-Play-Logo-2008.png" alt="Store logo">
 
 </center>
 </body>
