--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <h1>My Store</h1>
   <img src = "Google-Play-Logo-2008.png" width="900" alt="Store logo">
 
+  <h2>Store Information</h2>
+  <p>Enjoy millions of the latest Android apps, games, music, movies, TV, books, magazines & more. Anytime, anywhere, across your devices.</p>
+
 </center>
 </body>
 </html>
