--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <h2>Store Information</h2>
   <p>Enjoy millions of the latest Android apps, games, music, movies, TV, books, magazines & more. Anytime, anywhere, across your devices.</p>
 
+  <h2>Our Products</h2>
+  <ul>
+    <li>Game 1</li>
+    <li>Game 2</li>
+    <li>Game 3</li>
+  </ul>
+
 </center>
 </body>
 </html>
